* Better slope alignment for large, flat enemies (i.e. big scorpion and crocodile).
* Lock turn rate when automatically aligning Lara to objects.
* Don't play Lara alignment animations if the interacted object is too close.
* Allow vertical pole mounts only when facing one directly.
* Allow vertical pole mounts while turning, walking, or running.
* Add standing 180 turn. Activated with WALK+ROLL on dry ground, automatic when in wade-height water or swamp.
* Update monkey swing 180 turn animation.
* Update backward monkey swing animations.
* Crouch turn to crouch idle and crawl turn 
* Fix incorrect pole mounting.
* Fix zeroed forward velocity upon landing.
* Fix 1-frame turn rate delays.
* Fix occasional leave event calls when moving closer to volumes.
* Fix incorrect viewport size in windowed mode.
* Fix late landing animation dispatch in rare cases.
* Fix Lara's subway train death so that she no longer slides slowly after the animation has finished.
* Fix horseman's axe attack using his left foot as the damaging joint.
* Fix stargate blades needlessly pushing the player around while hardly doing any damage.
* Fix weapon hotkeys and add missing crossbow hotkey.

Lua API changes:

* Added Enable, Disable, GetActive, Get/SetSolid functions for static meshes.
* Added FadeOutComplete, StopAudioTrack and StopAudioTracks functions.
* Account for objects in HasLineOfSight tests.
* Timer.lua, EventSequence.lua and Util.lua have been moved to a subfolder, Engine.
* LevelFuncs can now contain tables as well as functions. These tables can contain functions and other tables, and so forth.
* Moveable functions SetOnHit, SetOnKilled, SetOnCollidedWithObject and SetOnCollidedWithRoom no longer take strings, and instead take function objects themselves.
* EventSequence and Timer no longer require you to call Timer.UpdateAll in OnControlPhase.
* TEN.Logic.AddCallback and TEN.Logic.RemoveCallback have been added.